Fix a small typo in the value proposition
You can only take control `of` your privacy, not `on` it.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -440,7 +440,7 @@
 	"home value proposition text 2": "Save time and manage them like never before.",
 	"home value proposition 3": "Follow your daily spendings",
 	"home value proposition text 3": "Never miss anything, not even your healthcare reimbursements.",
-	"home value proposition 4": "Take control on your privacy",
+	"home value proposition 4": "Take control of your privacy",
 	"home value proposition text 4": "We will never sell or share your data, pinky swear.",
 	"home testimony 1": "Congratulations for the new version, it's really amazing!",
 	"home testimony 1 icon": "😎",
